--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "UNLICENCED",
   "devDependencies": {
     "standard": "^10.0.3",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^3.10.0"
   },
   "dependencies": {
